Add :: font awesome plugin.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   scoped_model: ^1.0.1
   flutter_markdown: ^0.3.4
   emoji_picker: ^0.1.0
+  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
   flutter_test:
