Add :: camera feature to the project and search by camera feature.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_markdown: ^0.3.4
   emoji_picker: ^0.1.0
   font_awesome_flutter: ^8.8.1
+  image_picker: ^0.6.4
 
 dev_dependencies:
   flutter_test:
