--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   emoji_picker: ^0.1.0
   font_awesome_flutter: ^8.8.1
   image_picker: ^0.6.4
+  http: ^0.12.0+4
+  flutter_facebook_login: ^3.0.0
 
 dev_dependencies:
   flutter_test:
