--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^0.6.4
   http: ^0.12.0+4
   flutter_facebook_login: ^3.0.0
+  google_sign_in: ^4.4.1
 
 dev_dependencies:
   flutter_test:
