--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,13 @@ dependencies:
   http: ^0.12.0+4
   flutter_facebook_login: ^3.0.0
   google_sign_in: ^4.4.1
+  json_annotation: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.0
+  json_serializable: ^3.3.0
 
 
 # For information on the generic Dart part of this file, see the
