--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   google_sign_in: ^4.4.1
   json_annotation: ^3.0.1
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
