--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^4.4.1
   json_annotation: ^3.0.1
   cached_network_image: ^2.2.0+1
+  shared_preferences: ^0.5.7+3
 
 dev_dependencies:
   flutter_test:
