--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -43,6 +43,8 @@ dependencies:
   json_annotation: ^3.0.1
   cached_network_image: ^2.2.0+1
   shared_preferences: ^0.5.7+3
+  webview_flutter: ^0.3.24
+  http_auth: ^0.3.0
 
 dev_dependencies:
   flutter_test:
